--- a/style.css
+++ b/style.css
@@ -520,67 +520,7 @@ button3 {
         border-radius: 17%;
     }
 
-/* Caption text */
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
 
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-    .active, .dot:hover {
-        background-color: #FF8200;
-    }
-
-/* Fading animation */
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-
-    to {
-        opacity: 1
-    }
-}
 
 
 
@@ -595,14 +535,6 @@ hr {
     height: 10px;
     border: none;
 
-}
-
-* {
-    margin: 0;
-}
-
-body {
-    font-family: "Roboto", sans-serif;
 }
 
 .navbar {
@@ -736,6 +668,7 @@ main {
     main h1 {
         padding: 30px 20px 20px;
         font-size: 24px;
+        font-family: Poppins;
     }
 
 
