--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     font-family: Poppins;
     src: url('Poppins-Regular.ttf');
 }
+
+a{
+        font-family: Poppins;
+
+}
+
 .header {
     height: 175px;
     width: 100%;
@@ -181,6 +187,8 @@ p{
     padding-top:30px;
     padding-bottom:25px;
     position: center;
+        font-family: Poppins;
+
 }
 p span {
     background-color: #001E30
@@ -209,11 +217,15 @@ button {
 
 h2 {
     font-size: 36px;
+        font-family: Poppins;
+
 }
 
 h6 {
     font-size: 17px;
     padding: 30px;
+        font-family: Poppins;
+
 }
 
 @media only screen and (max-width: 600px) {
