--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ button3 {
     position: relative;
     width: 100%;
     height: 15vh;
-    margin-bottom: -7px; /*Fix for safari gap*/
+    margin-bottom: -7px;
     min-height: 100px;
     max-height: 150px;
 }
@@ -511,7 +511,6 @@ style="font-family: Poppins;"
 }
 
 
-/* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
     position: absolute;
