--- a/style.css
+++ b/style.css
@@ -763,3 +763,9 @@ img {
         line-height: 30px;
         font-weight: 400;
     }
+
+@media(max-width: 1000px){
+.cards{
+    padding:0px;
+    }
+}
