--- a/style.css
+++ b/style.css
@@ -4,18 +4,19 @@
     font-family: Poppins;
     box-sizing: border-box;
 }
+
 @font-face {
     font-family: GulfsDisplay;
     src: url('./Fonts/GulfsDisplay.ttf');
 }
+
 @font-face {
     font-family: Poppins;
     src: url('./Fonts/Poppins-Regular.ttf');
 }
 
-a{
-        font-family: Poppins;
-
+a {
+    font-family: Poppins;
 }
 
 .header {
@@ -177,7 +178,6 @@ h1 {
     font-size: 36px;
     padding-bottom: 15px;
     font-family: GulfsDisplay, sans-serif;
-    font-weight:100;
 }
 h1 span {
     background-color: #001E30
@@ -188,12 +188,9 @@ p{
     padding-top:30px;
     padding-bottom:25px;
     position: center;
-        font-family: Poppins;
-
 }
 p span {
-    background-color: #001E30;
-        font-family: Poppins;
+    background-color: #001E30
 }
 
 button {
@@ -211,7 +208,6 @@ button {
     z-index: 500;
     cursor: pointer;
     color: #01FF6E;
-    style="font-family: Poppins;"
 }
     button:hover {
         background-color: #002930;
@@ -220,15 +216,11 @@ button {
 
 h2 {
     font-size: 36px;
-        font-family: Poppins;
-
 }
 
 h6 {
     font-size: 17px;
     padding: 30px;
-        font-family: Poppins;
-
 }
 
 @media only screen and (max-width: 600px) {
@@ -393,7 +385,7 @@ button3 {
     position: relative;
     width: 100%;
     height: 15vh;
-    margin-bottom: -7px;
+    margin-bottom: -7px; /*Fix for safari gap*/
     min-height: 100px;
     max-height: 150px;
 }
@@ -462,7 +454,6 @@ button2 {
     margin-right: 50px;
     text-align: center;
     transition: all 1s ease-in-out;
-    font-family: Poppins;
 }
 
     button2:hover {
@@ -476,7 +467,6 @@ button3 {
     text-align: center;
     margin-bottom:50px;
     transition: all 1s ease-in-out;
-    style="font-family: Poppins;"
 }
 
     button3:hover {
@@ -496,7 +486,7 @@ button3 {
     padding: 10px 20px;
     border-color: #ff0040;
     border-style: solid;
-font-family: Poppins;
+    font-family: 'Roboto Mono', monospace;
     font-size: 15px;
     font-weight: bolder;
 }
@@ -510,6 +500,7 @@ font-family: Poppins;
 }
 
 
+/* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -536,7 +527,67 @@ font-family: Poppins;
         border-radius: 17%;
     }
 
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
 
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+    .active, .dot:hover {
+        background-color: #FF8200;
+    }
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
 
 
 
@@ -553,6 +604,14 @@ hr {
 
 }
 
+* {
+    margin: 0;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+}
+
 .navbar {
     width: 100%;
     height: 50px;
@@ -567,6 +626,7 @@ hr {
     padding: 0 50px;
     height: 100%;
     color: white;
+    font-family: "Sen", sans-serif;
 }
 
 .logo-container {
@@ -683,7 +743,6 @@ main {
     main h1 {
         padding: 30px 20px 20px;
         font-size: 24px;
-        font-family: Poppins;
     }
 
 
@@ -764,19 +823,9 @@ img {
         font-weight: 400;
     }
 
-@media(max-width: 1000px){
-.cards{
-    left:0px;
-    margin-right:40px;
-    }
-}
 
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
-}
+
 
 img {
     max-height: 200px;
@@ -1087,5 +1136,4 @@ g-top: 60px;
 .left-menu-icon.active {
     color: black;
 }
-
 
