--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ p span {
 
 button {
     background-color: #002930;
-    width: 200px;
+    padding:20px;
     height: 50px;
     border-radius: 12px;
     position: center;
@@ -175,7 +175,7 @@ h6 {
 
 button2 {
     background-color: rgb(0 0 0 / 0.45);
-    width: 100px;
+    width: 75px;
     height: 50px;
     border-radius: 12px;
     position: center;
