--- a/style.css
+++ b/style.css
@@ -173,8 +173,16 @@ h6 {
     }
 }
 
+
+
+
+
+
 button2 {
-    background-color: rgb(0 0 0 / 0.45);
+    background: rgba(1,255,110,1);
+    margin-right: 50px;
+    text-align: center;
+    transition: all 1s ease-in-out;
     width: 75px;
     height: 50px;
     border-radius: 12px;
@@ -188,9 +196,11 @@ button2 {
     cursor: pointer;
 }
 
-button2:hover{
-    background-color: rgb(0 0 0 / 0.9)
-}
+    button2:hover {
+        background: rgba(61,203,0,1);
+        margin-right: 50px;
+        text-align: center;
+    }
 
 button3 {
     background-color: #5865F2;
