--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ h6 {
 
 
 button2 {
-    background: rgba(1,255,110,1);
+    background: #01ff6e;
     margin-right: 50px;
     text-align: center;
     transition: all 1s ease-in-out;
@@ -194,12 +194,6 @@ button2 {
     z-index: 500;
     cursor: pointer;
 }
-
-    button2:hover {
-    background: rgba(1,255,110,1);
-        margin-right: 50px;
-        text-align: center;
-    }
 
 button3 {
     background-color: #5865F2;
