--- a/style.css
+++ b/style.css
@@ -1056,3 +1056,19 @@ g-top: 60px;
 }
 
 
+.hiremebuttonusethisclasslol{
+        background: #01ff6e;
+    margin-right: 50px;
+    text-align: center;
+    transition: all 1s ease-in-out;
+    width: 75px;
+    height: 50px;
+    border-radius: 12px;
+    position: center;
+    transition-duration: 1s;
+    border: none;
+    display: inline-block;
+    padding-top: 12px;
+    z-index: 500;
+    cursor: pointer;
+}
