--- a/style.css
+++ b/style.css
@@ -679,10 +679,9 @@ main {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(150px,450px));
+    grid-template-columns: repeat(auto-fit,minmax(150rem,450rem));
     padding: 20px;
     grid-gap: 40px;
-    width:75%;
 }
 
 .card {
