--- a/style.css
+++ b/style.css
@@ -671,8 +671,8 @@ main {
 
 .parent {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     grid-column-gap: 6px;
     grid-row-gap: 6px;
 }
