--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ z-index: 10;
                     font-size: 24px;
                 }
               
-              .nav{
+              .header{
                 display:none;
               }
             
