--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     box-sizing: border-box;
     background-color:#202020;
     overflow-x:hidden;
+    width:100%;
 }
 
 * {
@@ -15,6 +16,7 @@ body {
 html {
     scroll-snap-type: y mandatory;
     overflow-x:hidden;
+    width:100%;
 }
 
 
