--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html {
     min-height: 100vh;
 }
 
+
 section {
     scroll-snap-align: start;
     background: #202020;
@@ -317,6 +318,16 @@ nav img {
         box-shadow: 0 0 10px 5px rgba(120, 15, 15, 0.703);
     }
 
+    #filterbar{
+        width:267px;
+    }
+
+    .sphericalbutton{
+        width:35vw;
+    }
+
+
+
     .headerimg {
         width: 80%;
         margin-left: 10%;
@@ -589,7 +600,7 @@ nav img {
     padding-right:12px;
     z-index: 100;
     position: fixed;
-    top: 85vh;
+    top: 80vh;
     margin: 0 auto;
     height:75px;
     background: rgba(255, 33, 33, 0.768);
@@ -606,7 +617,7 @@ nav img {
 
 .openfilterbar{
     height:500px !important;
-    top:calc(85vh - 500px) !important;
+    top:calc(80vh - 500px) !important;
     padding-left:100px !important;
     padding-right:100px !important;
 }
@@ -662,6 +673,8 @@ nav img {
 
 #filtertags{
     transition: 0.5s opacity;
+    margin: auto;
+    text-align: center;
 }
 #sorttags {
     transition: 0.5s opacity;
