--- a/style.css
+++ b/style.css
@@ -726,7 +726,7 @@ nav img {
         
         
         #filtertags > *{
-            margin-bottom: 10px;
+            margin-bottom: 5px !important;
         }
 
         .filterbutton{
