--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ nav img {
     box-shadow: 0 4px 10px rgba(55, 14, 14, 0.48) inset;
     cursor: pointer;
     color: white;
-    line-height: 56px;
+    line-height: 70px;
     font-size: 20px;
     padding: 20px;
     width: 100px;
@@ -728,11 +728,12 @@ nav img {
             margin-bottom: 5px !important;
         }
 
-        .filterbutton{
-            padding-left:50px !important;
-            padding-right:50px !important;
-            margin-bottom: 5px !important;
-        }
+    .filterbutton {
+        padding-left: 50px !important;
+        padding-right: 50px !important;
+        margin-bottom: 5px !important;
+        line-height: 52px !important;
+    }
         
         .openfilterbar{
             height:560px !important;
