--- a/style.css
+++ b/style.css
@@ -913,6 +913,6 @@ nav img {
         
         .reviewsectioncontainterimg{
             padding-top:100px;
-            background-color: #ff2b2b;
+            background-color: #FF3232;
         }
 }
