--- a/style.css
+++ b/style.css
@@ -689,6 +689,7 @@ nav img {
     .review{
         color:black;
         padding:30px;
+        padding-left:20px;
         border-radius: 30px;
         margin-left:20px;
         width:5in;
