--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     }
 
     *::-webkit-scrollbar-track {
-        background: #202020;
+        background: rgba(32,32,32, 0.5);
     }
 
     *::-webkit-scrollbar-thumb {
