--- a/style.css
+++ b/style.css
@@ -740,23 +740,23 @@ nav img {
     }
 
 
-    .review:hover{
+    /*.review:hover{
         background-color:#f3f3f3;
         -webkit-box-shadow: 2px 2px 0px 0px rgba(0,0,0,1);
         -moz-box-shadow: 2px 2px 0px 0px rgba(0,0,0,1);
         box-shadow: 2px 2px 0px 0px rgba(0,0,0,1);
-    }
+    }*/
 
     .review:last-of-type{
         margin-right:50px;
     }
 
-    .review:last-of-type:hover{
+    /*.review:last-of-type:hover{
         background-color:#ed0000;
         -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
         -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
         box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-    }
+    }*/
 
     .reviews .review h1{
         margin-bottom:50px;
