--- a/style.css
+++ b/style.css
@@ -968,3 +968,35 @@ nav img {
         height:400px;
         }
 }
+
+
+.familiarcontainer {
+    width: 100vw;
+    height: 112.5px;
+    /* From https://css.glass */
+    background: rgba(0, 0, 0, 0.54);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(9.5px);
+    -webkit-backdrop-filter: blur(9.5px);
+    border: 1px solid rgba(0, 0, 0, 0.32);
+    padding-left:-70px;
+    margin-top:30px;
+    margin-bottom:30px;
+}
+
+.familiarcontainer img{
+    margin-top:18.75px;
+    height:75px;
+    z-index:1000;
+}
+
+.aboutpartition{
+    overflow-x:hidden;
+    height:100vh;
+    scroll-snap-align:center;
+    overflow:hidden;
+}
+
+.aboutpartition h1{
+    padding-left:45px;
+}
