--- a/style.css
+++ b/style.css
@@ -905,6 +905,37 @@ nav img {
     transition: 0.5s opacity;
 }
 
+.familiarcontainer {
+    width: 100vw;
+    height: 112.5px;
+    /* From https://css.glass */
+    background: rgba(0, 0, 0, 0.54);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(9.5px);
+    -webkit-backdrop-filter: blur(9.5px);
+    border: 1px solid rgba(0, 0, 0, 0.32);
+    padding-left: -70px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+    .familiarcontainer img {
+        margin-top: 18.75px;
+        height: 75px;
+        z-index: 1000;
+    }
+
+.aboutpartition {
+    overflow-x: hidden;
+    height: 100vh;
+    scroll-snap-align: center;
+    overflow: hidden;
+}
+
+    .aboutpartition h1 {
+        padding-left: 20px;
+    }
+
 
 
 @media (min-width:320px) and (max-width:1024px) { /* smartphones, iPhone, portrait 480x320 phones */
@@ -967,36 +998,13 @@ nav img {
         object-fit:contain;
         height:400px;
         }
+
+    .familiarcontainer {
+        height: 220px;
+        padding-left: -0px;
+        padding-right:100px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
 }
 
-
-.familiarcontainer {
-    width: 100vw;
-    height: 112.5px;
-    /* From https://css.glass */
-    background: rgba(0, 0, 0, 0.54);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(9.5px);
-    -webkit-backdrop-filter: blur(9.5px);
-    border: 1px solid rgba(0, 0, 0, 0.32);
-    padding-left:-70px;
-    margin-top:30px;
-    margin-bottom:30px;
-}
-
-.familiarcontainer img{
-    margin-top:18.75px;
-    height:75px;
-    z-index:1000;
-}
-
-.aboutpartition{
-    overflow-x:hidden;
-    height:100vh;
-    scroll-snap-align:center;
-    overflow:hidden;
-}
-
-.aboutpartition h1{
-    padding-left:45px;
-}
