--- a/style.css
+++ b/style.css
@@ -926,10 +926,10 @@ nav img {
     }
 
 .aboutpartition {
-    padding-top:100px;
+    max-height:calc(100vh - 300px);
+    margin-top: 100px;
     overflow-x: hidden;
-    height: 100vh;
-    scroll-snap-align: center;
+    scroll-snap-align: start;
     overflow: hidden;
 }
 
